@@ -102,7 +102,7 @@ readPlain <- function(elem, language, id)
     PlainTextDocument(elem$content, id = id, language = language)
 @
 For examples on readers using the function generator please have a look at
-\code{?readPDF} or \code{?readTabular}.
+\code{?readPDF} or \code{?readPDF}.
 
 However, for many cases, it is not necessary to define each detailed aspect of
 how to extend \pkg{tm}. Typical examples are \acronym{XML} files which are very
@@ -111,56 +111,32 @@ parsers. The aim of the remainder in this document is to give an overview on
 how simpler, more user-friendly, forms of extension mechanisms can be applied
 in \pkg{tm}.
 
-\section*{Custom General Purpose Readers}
-A general situation is that you have gathered together some
-information into a tabular data structure (like a data frame or a list
-matrix) that suffices to describe documents in a corpus. However, you
-do not have a distinct file format because you extracted the
-information out of various resources. Now you want to use your
-information to build a corpus which is recognized by \pkg{tm}.
-
-This can be done in \pkg{tm} by generating a custom reader function
-for tabular data structures via \code{readTabular()} that can be
-configured via a so-called \emph{mapping}. A mapping describes how
-your information in the tabular data structure is mapped to the
-individual attributes of text documents in \pkg{tm}.
+\section*{Custom Data Formats}
+A general situation is that you have gathered together some information into a
+tabular data structure (like a data frame or a list matrix) that suffices to
+describe documents in a corpus. However, you do not have a distinct file format
+because you extracted the information out of various resources, e.g., as
+delivered by \code{readtext()} in package \pkg{readtext}. Now you want to use
+your information to build a corpus which is recognized by \pkg{tm}.
 
 We assume that your information is put together in a data frame. E.g.,
 consider the following example:
 <<keep.source=TRUE>>=
-df <- data.frame(contents = c("content 1", "content 2", "content 3"),
+df <- data.frame(doc_id   = c("doc 1"    , "doc 2"    , "doc 3"    ),
+		 text     = c("content 1", "content 2", "content 3"),
                  title    = c("title 1"  , "title 2"  , "title 3"  ),
                  authors  = c("author 1" , "author 2" , "author 3" ),
                  topics   = c("topic 1"  , "topic 2"  , "topic 3"  ),
                  stringsAsFactors = FALSE)
 @
-We want to map \code{contents}, \code{title}, \code{authors}, and
-\code{topics} to the relevant entries of a text
-document.
+We want to map the data frame rows to the relevant entries of a text document.
 
-An entry \code{content} in the mapping will be matched to fill the actual
-content of the text document, all other fields will be used as metadata tags.
-So for our data frame we define a possible mapping as follows:
-<<Mapping,keep.source=TRUE>>=
-m <- list(content = "contents", heading = "title",
-          author = "authors", topic = "topics")
-@
-Now we can construct a customized reader by passing over the
-previously defined mapping:
-<<myReader>>=
-myReader <- readTabular(mapping = m)
-@
-
-Finally we can apply our reader function at any place where \pkg{tm}
-expects a reader. E.g., we can construct a corpus out of the data
-frame:
+An entry \code{text} in the mapping will be matched to fill the actual content
+of the text document, \code{doc\_id} will be used as document ID, all other
+fields will be used as metadata tags. So we can construct a corpus out of the
+data frame:
 <<>>=
-(corpus <- VCorpus(DataframeSource(df), readerControl = list(reader = myReader)))
-@
-
-As we see the information is mapped as we want to the individual attributes
-of each document:
-<<>>=
+(corpus <- Corpus(DataframeSource(df)))
 corpus[[1]]
 meta(corpus[[1]])
 @
